--- a/css/Tiles2.css
+++ b/css/Tiles2.css
@@ -95,13 +95,14 @@ p {
 
     float: left;
     cursor: pointer;
-    display: flex;
-    align-items: flex-start;
+    /*display: flex;
+    align-items: flex-start;*/
     cursor: pointer;
-    background:rgb(255, 255, 255);
+    background:rgba(40, 40, 40, 0.40);
     padding: 10px 0 10px 10px;
 
     margin-right: 10px;
+    margin-top: 5px;
     
    
      
@@ -138,7 +139,12 @@ p {
     vertical-align:middle;
     
 }
-
+.details-image {
+    max-width:90%;
+    margin:20px 20px 0 0;
+    display :inline;
+    vertical-align:middle;
+}
 .vignette {
     display: flex;
     flex-direction:row;
@@ -152,8 +158,8 @@ p {
 .vertical-text {
     position:absolute;
     
-    font-size:1.5em;  
-    font-family:Garamond;
+    font-size:1.6em;  
+    
     overflow:hidden;
 	-ms-transform: rotate(90deg);
 	-moz-transform: rotate(90deg);
@@ -166,7 +172,6 @@ p {
 	transform-origin: left top 0;
 
 	/*background: rgba(0, 0, 0, 0.75);*/
-	color: rgba(0, 0, 0, 0.60);
     white-space:nowrap;
 	padding-left: 10px;
 	/*text-transform: uppercase;*/
