--- a/css/Tiles2.css
+++ b/css/Tiles2.css
@@ -1,4 +1,38 @@
-﻿.drop-box {
+﻿    /* inherit height from window */
+html, body { height: 100%; 
+             width:100%;
+             background-color: rgb(128, 128, 128) !important;
+             font-family: "aktiv-grotesk-std", "Helvetica Neue", "Helvetica", sans-serif;
+             color: rgb(255, 255, 255);
+             overflow-x:hidden;
+             overflow-y:hidden;
+
+
+
+}
+/* Let's get this party started */
+::-webkit-scrollbar {
+    width: 4px;
+}
+ 
+/* Track */
+::-webkit-scrollbar * {
+background:transparent !important; 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    background: rgba(0,0,0,0.5); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+::-webkit-scrollbar-thumb:window-inactive {
+	background: rgb(255, 106, 0,0.8); 
+}
+
+
+.drop-box {
      transition: all .3s ease-out;
     -o-transition: all .3s ease-out;
     -moz-transition: all .3s ease-out;
@@ -169,6 +203,7 @@ hr{
     -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; 
 }
 .tile-open {
+    
     float: left;
     /*display: flex;
     align-items: flex-start;*/
@@ -183,15 +218,19 @@ hr{
     -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;
     -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; 
 }
-
-.details {
+.hidden-object {
     display:none;
+}
+.details {
+    
     /*-webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    overflow:auto;*/
+    max-width:625px;
     position:relative;
-     margin-bottom: 5px;
+    margin-bottom: 8px;
+    margin-top: 8px;
 }
 
 .details-image {
@@ -200,7 +239,7 @@ hr{
     margin-bottom:20px;
     margin-left:auto;
     margin-right:auto;
-    width:600px;
+    width:100%;
 }
 
 .univers2 {
