--- a/css/Tiles2.css
+++ b/css/Tiles2.css
@@ -239,7 +239,7 @@ hr{
     margin-bottom:20px;
     margin-left:auto;
     margin-right:auto;
-    width:100%;
+    max-width:100%;
 }
 
 .univers2 {
