--- a/css/Tiles4.css
+++ b/css/Tiles4.css
@@ -28,7 +28,9 @@
 html, body { 
     height: 100%; 
     width:100%;
-    background-color: rgb(255, 255, 255) !important;
+    background-color: rgba(0,0,0,1) !important;
+
+
     font-family: 'Josefin Slab','Roboto-Thin','Roboto-Black','RobotoCondensed-Light','Roboto-Light','Roboto-Thin', "Helvetica Neue", "Helvetica", serif;
     color: rgb(35, 35, 35);
     overflow-x:hidden;
@@ -64,10 +66,10 @@ background:transparent !important;
     -moz-transition: all .3s ease-out;
     -webkit-transition: all .3s ease-out;  
 }
-
-
-.tilesContainer {
-    /*http://www.colorzilla.com/gradient-editor/*/
+.tilesContainer-background {
+     position:absolute;
+    width:100%;
+    height:100%;
 background: rgb(211,211,211); /* Old browsers */
 background: -moz-linear-gradient(top,  rgba(211,211,211,1) 0%, rgba(247,247,247,1) 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(211,211,211,1)), color-stop(100%,rgba(247,247,247,1))); /* Chrome,Safari4+ */
@@ -76,6 +78,44 @@ background: -o-linear-gradient(top,  rgba(211,211,211,1) 0%,rgba(247,247,247,1) 
 background: -ms-linear-gradient(top,  rgba(211,211,211,1) 0%,rgba(247,247,247,1) 100%); /* IE10+ */
 background: linear-gradient(to bottom,  rgba(211,211,211,1) 0%,rgba(247,247,247,1) 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d3d3d3', endColorstr='#f7f7f7',GradientType=0 ); /* IE6-9 */
+
+}
+
+.tilesContainer-dark {
+background: rgb(140,140,140); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(140,140,140,1) 0%, rgba(191,191,191,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(140,140,140,1)), color-stop(100%,rgba(191,191,191,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(140,140,140,1) 0%,rgba(191,191,191,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(140,140,140,1) 0%,rgba(191,191,191,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(140,140,140,1) 0%,rgba(191,191,191,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(140,140,140,1) 0%,rgba(191,191,191,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8c8c8c', endColorstr='#bfbfbf',GradientType=0 ); /* IE6-9 */
+
+    padding-left:150px;
+    height: -moz-calc(100% - 50px) !important; 
+    height: -webkit-calc(100% - 50px)!important; 
+    height: -o-calc(100% - 50px)!important; 
+    height: calc(100% - 50px)!important; 
+    
+
+    /*white-space: nowrap;*/
+    width: -moz-calc(100% - 150px) !important; 
+    width: -webkit-calc(100% - 150px)!important; 
+    width: -o-calc(100% - 150px)!important; 
+    width: calc(100% - 150px)!important; 
+	overflow-y: hidden !important;
+	overflow-x: scroll !important;
+	-webkit-overflow-scrolling: touch;
+
+        
+    scrollbar-base-color : transparent;  
+    scrollbar-track-color : transparent;
+    scrollbar-highlight-color : transparent;
+    scrollbar-arrow-color : transparent;
+    scrollbar-face-color : rgba(3, 255, 8, 0.17);  
+}
+.tilesContainer {
+    /*http://www.colorzilla.com/gradient-editor/*/
 
     padding-left:150px;
     height: -moz-calc(100% - 50px) !important; 
@@ -255,9 +295,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
     overflow-x:hidden;
 }
 
-.tile:hover {
-    opacity:0.2;
-}
+
 .tile {
    
     float: left;
