--- a/css/admin.css
+++ b/css/admin.css
@@ -1,4 +1,6 @@
-﻿.tile-admin {
+﻿
+
+.tile-admin {
    max-width:550px
 }
 
@@ -69,13 +71,30 @@
     height:auto;
 }
 .drop-image {
-    background:grey;
-    min-width:200px;
-    min-height:200px;
-    max-width:400px;
-    max-height:200px;
+     background: #aaa;
+    box-shadow: inset 0 0 100px #6c6c6c;
 }
-
+.inline-images {
+    display: -webkit-inline-flex;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-align-items: flex-start;
+    align-items: flex-start;
+    width:100%;
+}
+.fa-li {
+    width:100%;
+  margin: auto;
+  position: absolute;
+  left: 0; right: 0;
+   top: 50%;                    
+   transform: translate(0, -50%)
+}
+.details-image-container {
+    position:relative;
+    width:50%;
+    color:#333;
+}
 .inner-tile {
     position:relative;
 }
